--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,10 @@ categories = ["command-line-interface", "gui"]
 license = "MIT/Apache-2.0"
 
 [dependencies]
-cursive = { version = "0.14", default-features = false }
+cursive_core = "0.2"
 chrono = "0.4"
 
 [dev-dependencies]
 rand = "0.7"
 lazy_static = "1.2"
-cursive = "0.14"
+cursive = "0.16"
