--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 keywords = ["cursive", "ncurses", "TUI", "UI", "calendar"]
 categories = ["command-line-interface", "gui"]
 license = "MIT/Apache-2.0"
+edition = "2018"
 
 [dependencies]
 cursive_core = "0.2"
