--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "cursive_calendar_view"
-version = "0.7.1"
-authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>"]
+version = "0.7.2"
+authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>", "Alexandre Bury <alexandre.bury@gmail.com>"]
 description = "A basic calendar view implementation for cursive."
 repository = "https://github.com/BonsaiDen/cursive_calendar_view.git"
 readme = "README.md"
